# tourno

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  tinker_ckpts.txt
cwbench-rl/eval/: base.json  pointwise.json  (+3 more)
datasets/: cw_test.jsonl  cw_train.jsonl  cw_val.jsonl  cwbench_all.jsonl  cwbench_preferences.jsonl  cwbench_test.jsonl  cwbench_train.jsonl  cwbench_val.jsonl  eqbench3_test.jsonl  eqbench3_train.jsonl  eqbench3_val.jsonl  healthbench_val.jsonl  rewardbench2_test.jsonl  rewardbench2_train.jsonl  rewardbench2_val.jsonl  truthfulqa_test.jsonl  truthfulqa_train.jsonl  truthfulqa_val.jsonl  tulu3if_all.jsonl  tulu3if_test.jsonl  tulu3if_train.jsonl  tulu3if_val.jsonl  tulu_if_test.jsonl  tulu_if_val.jsonl
pioneer/: logger.py  loop.py  models.py  types.py
prompts/: cw_pairwise_judge.jinja  cw_pointwise_judge.jinja  cwbench_pairwise.jinja  cwbench_pointwise.jinja  eqbench3_master_analysis.txt  eqbench3_master_standard.txt  eqbench3_pairwise_analysis.txt  eqbench3_pairwise_standard.txt  eqbench3_pointwise_analysis.txt  eqbench3_pointwise_standard.txt  healthbench_holistic_pairwise_margin.txt  healthbench_holistic_pointwise_score_0_20.txt  healthbench_pairwise_judge.txt  healthbench_pairwise_judge_new.txt  healthbench_pairwise_judge_train.txt  healthbench_pointwise_judge.txt  healthbench_rubric_pairwise_reasoned_choice.txt  healthbench_rubric_pointwise_reasoned_score.txt  rewardbench2_meta_pairwise.txt  rewardbench2_meta_pointwise.txt  rewardbench2_policy_pointwise.txt  truthfulqa_lenient_judge.txt  truthfulqa_pairwise_judge.txt  truthfulqa_pointwise_judge.txt  truthfulqa_strict_judge.txt  tulu_eval_judge.txt  tulu_pairwise.jinja  tulu_pairwise_judge.jinja  tulu_pairwise_judge.txt  tulu_pointwise.jinja  tulu_pointwise_judge.jinja  tulu_pointwise_judge.txt
tourno/: data.py  logger.py  tournament.py  types.py
(+107 files in other folders)
